--- a/arch/arm64/configs/begonia_user_defconfig
+++ b/arch/arm64/configs/begonia_user_defconfig
@@ -491,6 +491,7 @@ CONFIG_INPUT_JOYSTICK=y
 CONFIG_JOYSTICK_XPAD=y
 CONFIG_JOYSTICK_XPAD_FF=y
 CONFIG_JOYSTICK_XPAD_LEDS=y
+CONFIG_HID_NINTENDO=y
 CONFIG_HID_SONY=y
 # ERRATUM
 # CONFIG_FSL_ERRATUM_A008585 is not set
