--- a/arch/arm64/configs/begonia_user_defconfig
+++ b/arch/arm64/configs/begonia_user_defconfig
@@ -483,3 +483,4 @@ CONFIG_ELEVATOR_DETECT=y
 CONFIG_SIMTRAY_STATUS=y
 CONFIG_MTK_DRE30_SUPPORT=y
 CONFIG_MTK_GAMEPQ_SUPPORT=y
+CONFIG_MTK_SYSTRACKER_V2=n
